--- a/styles.css
+++ b/styles.css
@@ -23,17 +23,14 @@ ul {
     flex:1;
     display: flex;
     list-style: none;
-    flex-wrap: wrap;
-    justify-content: end;
+    flex-wrap:wrap;
+    justify-content: center;
     margin: 0;
-    align-items: end;
+    align-items: center;
     padding:0;
-    padding-bottom: 1rem;
 }
 li {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-    
+    padding: 0.5rem;
 }
 form {
     justify-content: center;
@@ -42,17 +39,16 @@ form {
 div {
     width:fit-content;
     margin:auto;
-    padding: 5px;
+    padding: 0.25rem;
 }
 h1 {
-    flex: 1;
     font-family: 'Lucida Handwriting', 'Brush Script MT', cursive;
-    margin:0;
-    width: fit-content;
-    white-space: nowrap;
+    margin: auto;
     padding: 1rem;
     font-size: 40px;
-    inline-size:auto;
+    flex:1;
+    display: flex;
+    justify-content: center;
 }
 h2 {
     font-family: 'Lucida Handwriting', 'Brush Script MT', cursive;
@@ -69,4 +65,8 @@ h3 {
     padding:1rem;
     padding-bottom: 0;
     font-size:35px;
+}
+span {
+    padding: 0.5rem;
+    margin: auto;
 }
