--- a/styles.css
+++ b/styles.css
@@ -1,121 +1,3 @@
-/*body {
-    background-color: rgb(55, 56, 57);
-    color: aliceblue;
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    min-width: 100dvw;
-    min-height: 100dvh;
-    flex: 1
-}
-main {
-    flex:1;
-    display: flex;
-}
-
-
-footer,header {
-    display: flex;
-    min-width: 100dvw;
-    background-color: rgb(31, 32, 33);
-}
-header ul {
-    flex:1;
-    display: flex;
-    list-style: none;
-    flex-wrap:wrap;
-    justify-content:end;
-    margin: 0;
-    align-items: center;
-    padding:0;
-    padding-right: 1rem;
-}
-header li {
-    padding: 0.5rem;
-}
-header h1 {
-    font-family: 'Lucida Handwriting', 'Brush Script MT', cursive;
-    margin: auto;
-    padding: 1rem;
-    font-size: 40px;
-    flex:1;
-    display: flex;
-    justify-content: start;
-}
-footer span {
-    padding: 0.5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    justify-content: start;
-    margin: auto;
-    flex:1;
-    display: flex;
-}
-form div {
-    width:fit-content;
-    margin:auto;
-    padding: 0.25rem;
-}
-
-
-.my-button {
-    background-color: rgb(101, 126, 179);
-    border-color: rgb(101, 126, 179);   
-}
-button {
-    margin: 0.5rem;
-}
-.my-button:hover {
-    background-color: rgb(88, 109, 154);
-    border-color: rgb(88, 109, 154);
-}
-a {
-
-    color:  rgb(122, 146, 199);
-}
-a:hover {
-    color:rgb(106, 126, 171);
-}
-
-
-h2 {
-    color: rgb(122, 146, 199);
-    font-family: 'Lucida Handwriting', 'Brush Script MT', cursive;
-    margin: auto;
-    width: fit-content;
-    white-space: nowrap;
-    padding:2rem;
-    font-size:60px;
-}
-h3 {
-    margin: auto;
-    width: fit-content;
-    white-space: nowrap;
-    padding:1rem;
-    padding-bottom: 0;
-    font-size:35px;
-}
-#faculty-glyphic-regular {
-  font-family: "Faculty Glyphic", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-  letter-spacing: 0.25rem;
-}
-
-
-.color-box-container {
-    display: flex;
-    border: 2px solid black;
-    flex-direction: row;
-}
-.inner-box {
-    width: 60px;
-    height: 60px;
-    border: 1px solid black;
-}*/
-
 /*core layout*/
 body {
     background-color: rgb(55, 56, 57);
@@ -124,24 +6,23 @@ body {
     margin: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100dvw;
     height: 100dvh;
 }
 footer, header {
     background-color: rgb(31, 32, 33);
     display: flex;
-    min-width: 100dvw;
+    width: 100%;
     justify-content: space-between;
 }
 main {
     display: flex;
     flex: 1;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
+
 /*header content*/
 header nav {
     flex:1;
@@ -176,14 +57,9 @@ input {
     margin-bottom: 0.5rem;
     margin-top: 0.5rem;
 }
-div {
-    justify-content: center;
-    display: flex;
-    margin: 1rem;
-}
+
 button {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
+    margin: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -222,6 +98,11 @@ a:hover {
 /*main content INDEX*/
 .main-transparent-container {
     background-color: rgba(55, 56, 57,0.825);
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     width: fit-content;
     border-radius: 40px;
     text-align: center;
@@ -283,5 +164,19 @@ main h2 {
 }
 /*main content GENERATOR*/
 .main-generator {
+    display: flex;
+    flex-direction: row;
+}
+img {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    object-fit: cover;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     
 }
