--- a/generator-styles.css
+++ b/generator-styles.css
@@ -94,84 +94,20 @@ a:hover {
     border: 1px solid black;
     margin: 0;
 }
-
-/*main content INDEX*/
-.main-transparent-container {
-    background-color: rgba(55, 56, 57,0.825);
-    display: flex;
-    flex: 1;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: fit-content;
-    border-radius: 40px;
-    text-align: center;
-}
-main span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-#faculty-glyphic-regular {
-    font-family: "Faculty Glyphic", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    letter-spacing: 0.25rem;
-
-    color: aliceblue;
-    margin: 0;
-    padding:1rem;
-    font-size:35px;
-}
-main h2 {
-    color: rgb(122, 146, 199);
-    font-family: 'Lucida Handwriting', 'Brush Script MT', cursive;
-    padding:2rem;
-    margin: 0;
-    font-size:60px;
-}
-.gradient-body {
-	background: linear-gradient(
-		45deg,
-		#80ffff,
-		#ff80ff,
-        #bb77ff,
-		#7b7bff,
-		#80ffff,
-		#ff80ff
-	);
-	background-size: 600% 100%;
-	animation: gradient 30s ease infinite;
-	height: 100vh;
-}
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 0%;
-	}
-	25% {
-		background-position: 25% 25%;
-	}
-	50% {
-		background-position: 50% 50%;
-	}
-	75% {
-		background-position: 75% 75%;
-	}
-	100% {
-		background-position: 100% 100%;
-	}
-}
 /*main content GENERATOR*/
 .main-generator {
-    display: flex;
     flex-direction: row;
+    overflow: hidden;
+}
+@media (max-width: 400px) {
+    img {
+        display: none;
+    }
 }
 img {
     opacity: 50%;
     height: 100%;
     width: 100%;
-    overflow: hidden;
     object-fit: cover;
 }
 .container {
@@ -179,5 +115,4 @@ img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
 }
