--- a/create-styles.css
+++ b/create-styles.css
@@ -77,6 +77,7 @@ a {
 a:hover {
     color:rgb(106, 126, 171);
 }
+/*5 squares within rectangle plus buttons*/
 .container {
     display: flex;
     flex-direction: column;
@@ -101,3 +102,39 @@ a:hover {
     margin: 0;
     padding: 0;
 }
+/*big color square plus rgb sliders*/
+
+.container-boxes {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    padding: 0rem;
+    margin: 0;
+}
+@media (max-width:400px) {
+    .container-boxes {
+        flex-direction: column;
+    }
+}
+.container-color {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    padding: 0rem;
+    margin: 0;
+}
+.color-box-selector {
+    width: 114px;
+    height: 114px;
+    background-color: black;
+    margin: 1rem;
+    padding: 0;
+}
+label {
+    margin: 0.5rem;
+}
+
