--- a/generator-styles.css
+++ b/generator-styles.css
@@ -15,12 +15,19 @@ footer, header {
     justify-content: space-between;
 }
 main {
+    background-image: url(color-splatter.jpg);
     display: flex;
     flex: 1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    background-size: cover;
+    background-position: center;
+}
+@media (max-width:400px) {
+    main {
+        transform: rotate(90deg);
+    }
 }
 
 /*header content*/
@@ -28,6 +35,11 @@ header nav {
     flex:1;
     display: flex;
     justify-content:end;
+}
+header img {
+    opacity: 100%;
+    height: 3rem;
+    width: auto;
 }
 header ul {
     display: flex;
@@ -82,16 +94,14 @@ a:hover {
     flex-direction: row;
     overflow: hidden;
 }
-@media (max-width: 400px) {
-    img {
-        display: none;
-    }
-}
-img {
-    opacity: 50%;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+.main-transparent-container {
+    background-color: rgba(55, 56, 57,0.825);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 40px;
+    text-align: center;
 }
 .container {
     display: flex;
@@ -99,9 +109,7 @@ img {
     justify-content: center;
     align-items: center;
     width: fit-content;
-    padding:0;
-    margin-left:0.5rem;
-    margin-right:0.5rem;
+    padding: 1rem;
 }
 .color-box-container {
     display: flex;
