--- a/index-styles.css
+++ b/index-styles.css
@@ -6,6 +6,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100dvh;
+    
 }
 footer, header {
     background-color: rgb(31, 32, 33);
@@ -19,6 +20,10 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    object-fit: cover;
+    background-image: url(color-splatter.jpg);
+    background-size: cover;
+    background-position: center;
 }
 /*header content*/
 header img {
@@ -102,9 +107,9 @@ a:hover {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: fit-content;
     border-radius: 40px;
     text-align: center;
+    padding: 1rem;
 }
 main span {
     display: flex;
@@ -119,30 +124,28 @@ main span {
 
     color: aliceblue;
     margin: 0;
-    padding:1rem;
     font-size:35px;
+    padding-top: 0.5rem;
 }
 main h2 {
     color: rgb(122, 146, 199);
     font-family: 'Lucida Handwriting', 'Brush Script MT', cursive;
-    padding:2rem;
+    padding-top:2rem;
+    padding-bottom:2rem;
+    padding-right: 0.5rem;
     margin: 0;
     font-size:60px;
-}
-form {
-    padding-bottom: 0.5rem;
 }
 .gradient-body {
 	background: linear-gradient(
 		45deg,
 		#80ffff,
 		#ff80ff,
-        #bb77ff,
 		#7b7bff,
 		#80ffff,
 		#ff80ff
 	);
-	background-size: 600% 100%;
+	background-size: 500% 100%;
 	animation: gradient 30s ease infinite;
 	height: 100vh;
 }
@@ -152,15 +155,15 @@ form {
 		background-position: 0% 0%;
 	}
 	25% {
-		background-position: 25% 25%;
+		background-position: 25% 0%;
 	}
 	50% {
-		background-position: 50% 50%;
+		background-position: 50% 0%;
 	}
 	75% {
-		background-position: 75% 75%;
+		background-position: 75% 0%;
 	}
 	100% {
-		background-position: 100% 100%;
+		background-position: 100% 0%;
 	}
 }
