--- a/palletes-styles.css
+++ b/palletes-styles.css
@@ -21,6 +21,9 @@ main {
     justify-content: center;
     align-items: center;
     width: 100%;
+    background-image: url(color-splatter.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 /*header content*/
@@ -83,6 +86,15 @@ a:hover {
 }
 
 /*main content PALLETES*/
+.main-transparent-container {
+    background-color: rgba(55, 56, 57,0.825);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 40px;
+    text-align: center;
+}
 .main-container {
     display: flex;
     flex-direction: row;
@@ -96,8 +108,8 @@ a:hover {
     justify-content: center;
     align-items: center;
     width: fit-content;
-    padding:0;
-    margin: 0;
+    padding: 1rem;
+    margin: 0.5rem;
 }
 .color-box-container {
     display: flex;
