--- a/following-styles.css
+++ b/following-styles.css
@@ -25,10 +25,12 @@ main {
     background-size: cover;
     background-position: center;
 }
-@media (max-width="400px") {
-    main {
-        flex-direction: column;
-    }
+.main-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
 }
 
 /*header content*/
