--- a/src/create/create.css
+++ b/src/create/create.css
@@ -1,5 +1,5 @@
 /*5 squares within rectangle plus buttons*/
-.container {
+.create-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -7,22 +7,22 @@
     width: fit-content;
     padding:0;
 }
-.color-box-container {
+.create-color-box-container {
     display: flex;
     border: 0.125rem solid black;
     flex-direction: row;
     margin: 0.5rem;
     padding: 0;
 }
-.inner-box {
-    width: 2.5rem;
-    height: 2.5rem;
+.create-inner-box {
+    width: 3.75rem;
+    height: 3.75rem;
     border: 0.0625rem solid black;
     margin: 0;
     padding: 0;
 }
 /*big color square plus rgb sliders*/
-.main-transparent-container {
+.create-main-transparent-container {
     background-color: rgba(55, 56, 57,0.825);
     display: flex;
     align-items: center;
@@ -32,7 +32,7 @@
     text-align: center;
     padding: 1rem;
 }
-.container-boxes {
+.create-container-boxes {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -41,7 +41,7 @@
     padding: 0;
     margin: 0;
 }
-.container-color {
+.create-container-color {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -50,16 +50,16 @@
     padding: 0;
     margin: 0;
 }
-.color-box-selector {
+.create-color-box-selector {
     width: 7.125rem;
     height: 7.125rem;
     background-color: black;
     margin: 0.5rem;
     padding: 0;
 }
-label {
+.create-label {
     margin: 0.5rem;
 }
-input {
+.create-input {
     margin: 0rem;
 }
