--- a/src/following/following.css
+++ b/src/following/following.css
@@ -19,5 +19,10 @@
     color: aliceblue;
     margin: 0;
     font-size: 1.25rem;
-    padding-top: 0
+}
+.thing {
+    padding-bottom: 1.5rem;
+}
+.form-thing {
+    padding-top: 1rem;
 }
