--- a/src/app.css
+++ b/src/app.css
@@ -20,7 +20,7 @@ main {
     flex: 1;
     justify-content: center;
     align-items: center;
-    background-image: url(color-splatter.jpg);
+    background-image: url(/color-splatter.jpg);
     background-size: cover;
     background-position: center;
 }
