--- a/src/following/following.css
+++ b/src/following/following.css
@@ -1,4 +1,11 @@
 /*main content FOLLOWING*/
+.following-main-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+}
 .following-main-transparent-container {
     background-color: rgba(55, 56, 57,0.825);
     display: flex;
