messed with header and made it so user able to log out and changed some of the data logging json stuff

--- a/src/login/login.css
+++ b/src/login/login.css
@@ -24,6 +24,16 @@ main span {
     margin: 0;
     font-size:2.25rem;
 }
+#login-faculty-glyphic-regular-2 {
+    font-family: "Faculty Glyphic", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    letter-spacing: 0.25rem;
+
+    color: aliceblue;
+    margin: 0;
+    font-size:2.25rem;
+}
 main h2 {
     color: rgb(122, 146, 199);
     font-family: 'Lucida Handwriting', 'Brush Script MT', cursive;
